Add results and improvements after first benchmark.